Part of bug 382459 - port bug 371309 to SeaMonkey. r=Neil